--- a/docs/tut_fsq.ipynb
+++ b/docs/tut_fsq.ipynb
@@ -33,11 +33,11 @@
    "id": "ce206c85-6d07-4139-8d10-392fdf598002",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-15T05:20:02.463963Z",
-     "iopub.status.busy": "2024-12-15T05:20:02.463568Z",
-     "iopub.status.idle": "2024-12-15T05:20:02.536787Z",
-     "shell.execute_reply": "2024-12-15T05:20:02.536495Z",
-     "shell.execute_reply.started": "2024-12-15T05:20:02.463938Z"
+     "iopub.execute_input": "2024-12-15T20:30:44.827383Z",
+     "iopub.status.busy": "2024-12-15T20:30:44.827126Z",
+     "iopub.status.idle": "2024-12-15T20:30:44.900631Z",
+     "shell.execute_reply": "2024-12-15T20:30:44.900317Z",
+     "shell.execute_reply.started": "2024-12-15T20:30:44.827355Z"
     }
    },
    "outputs": [],
@@ -61,11 +61,11 @@
    "id": "be52415e-dd87-4438-b969-f8c0245d8864",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-15T05:20:02.537139Z",
-     "iopub.status.busy": "2024-12-15T05:20:02.537067Z",
-     "iopub.status.idle": "2024-12-15T05:20:15.028128Z",
-     "shell.execute_reply": "2024-12-15T05:20:15.027784Z",
-     "shell.execute_reply.started": "2024-12-15T05:20:02.537132Z"
+     "iopub.execute_input": "2024-12-15T20:30:44.901000Z",
+     "iopub.status.busy": "2024-12-15T20:30:44.900926Z",
+     "iopub.status.idle": "2024-12-15T20:31:00.727284Z",
+     "shell.execute_reply": "2024-12-15T20:31:00.727011Z",
+     "shell.execute_reply.started": "2024-12-15T20:30:44.900992Z"
     }
    },
    "outputs": [],
@@ -90,11 +90,11 @@
    "id": "e29711c7-de6f-4a3f-b9ac-9b41c3fb0a74",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-15T05:20:15.029231Z",
-     "iopub.status.busy": "2024-12-15T05:20:15.029155Z",
-     "iopub.status.idle": "2024-12-15T05:20:15.031135Z",
-     "shell.execute_reply": "2024-12-15T05:20:15.030933Z",
-     "shell.execute_reply.started": "2024-12-15T05:20:15.029222Z"
+     "iopub.execute_input": "2024-12-15T20:31:00.728367Z",
+     "iopub.status.busy": "2024-12-15T20:31:00.728281Z",
+     "iopub.status.idle": "2024-12-15T20:31:00.730198Z",
+     "shell.execute_reply": "2024-12-15T20:31:00.730000Z",
+     "shell.execute_reply.started": "2024-12-15T20:31:00.728359Z"
     }
    },
    "outputs": [],
@@ -118,20 +118,18 @@
    "id": "2caf7d88-e55e-4b74-9f68-076c31bfd5c7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-15T05:20:15.031466Z",
-     "iopub.status.busy": "2024-12-15T05:20:15.031393Z",
-     "iopub.status.idle": "2024-12-15T05:20:15.033252Z",
-     "shell.execute_reply": "2024-12-15T05:20:15.032976Z",
-     "shell.execute_reply.started": "2024-12-15T05:20:15.031458Z"
+     "iopub.execute_input": "2024-12-15T20:31:00.730539Z",
+     "iopub.status.busy": "2024-12-15T20:31:00.730467Z",
+     "iopub.status.idle": "2024-12-15T20:31:00.732160Z",
+     "shell.execute_reply": "2024-12-15T20:31:00.731969Z",
+     "shell.execute_reply.started": "2024-12-15T20:31:00.730532Z"
     }
    },
    "outputs": [],
    "source": [
+    "# Collect an operation as a sequence of SQL snippets,\n",
+    "# and parameterize the target H3 resolution.\n",
     "def latlng_h3(res):\n",
-    "    \"\"\"\n",
-    "    Essentially a higher order function, parameterized by resolution, given\n",
-    "    by a list of SQL snippet strings.\n",
-    "    \"\"\"\n",
     "    return [\n",
     "        f'select h3_latlng_to_cell(latitude, longitude, {res}) as hexid',\n",
     "        'select h3_h3_to_string(hexid) as hexid',\n",
@@ -168,11 +166,11 @@
    "id": "4ef608db-485f-4f8b-9672-66fe44975df2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-15T05:20:15.033597Z",
-     "iopub.status.busy": "2024-12-15T05:20:15.033534Z",
-     "iopub.status.idle": "2024-12-15T05:20:15.108743Z",
-     "shell.execute_reply": "2024-12-15T05:20:15.108496Z",
-     "shell.execute_reply.started": "2024-12-15T05:20:15.033590Z"
+     "iopub.execute_input": "2024-12-15T20:31:00.732513Z",
+     "iopub.status.busy": "2024-12-15T20:31:00.732431Z",
+     "iopub.status.idle": "2024-12-15T20:31:00.802486Z",
+     "shell.execute_reply": "2024-12-15T20:31:00.802212Z",
+     "shell.execute_reply.started": "2024-12-15T20:31:00.732505Z"
     }
    },
    "outputs": [
@@ -202,11 +200,11 @@
    "id": "ab71ac22-9a78-4fad-8499-e3238aaa841a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-15T05:20:15.109098Z",
-     "iopub.status.busy": "2024-12-15T05:20:15.109026Z",
-     "iopub.status.idle": "2024-12-15T05:20:15.187329Z",
-     "shell.execute_reply": "2024-12-15T05:20:15.187095Z",
-     "shell.execute_reply.started": "2024-12-15T05:20:15.109090Z"
+     "iopub.execute_input": "2024-12-15T20:31:00.802832Z",
+     "iopub.status.busy": "2024-12-15T20:31:00.802760Z",
+     "iopub.status.idle": "2024-12-15T20:31:00.879874Z",
+     "shell.execute_reply": "2024-12-15T20:31:00.879678Z",
+     "shell.execute_reply.started": "2024-12-15T20:31:00.802823Z"
     }
    },
    "outputs": [
@@ -242,11 +240,11 @@
    "id": "524b6130-94e0-4c1a-b2c1-0ee079ff3ccd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-15T05:20:15.187699Z",
-     "iopub.status.busy": "2024-12-15T05:20:15.187629Z",
-     "iopub.status.idle": "2024-12-15T05:20:15.269445Z",
-     "shell.execute_reply": "2024-12-15T05:20:15.269250Z",
-     "shell.execute_reply.started": "2024-12-15T05:20:15.187691Z"
+     "iopub.execute_input": "2024-12-15T20:31:00.880187Z",
+     "iopub.status.busy": "2024-12-15T20:31:00.880122Z",
+     "iopub.status.idle": "2024-12-15T20:31:00.961910Z",
+     "shell.execute_reply": "2024-12-15T20:31:00.961658Z",
+     "shell.execute_reply.started": "2024-12-15T20:31:00.880179Z"
     }
    },
    "outputs": [
@@ -293,9 +291,79 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "902ef593-0e62-46fa-93a9-28bdbfb718a0",
+   "metadata": {},
+   "source": [
+    "# Loading full dataset\n",
+    "\n",
+    "It is also possible to load the full dataset with DuckDB glob pattern matching. Just be careful calling this multiple times, because you may get throttled."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "049a335a-bc1b-4a37-b7cc-9de9ebb9a4f3",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-12-15T20:31:00.962276Z",
+     "iopub.status.busy": "2024-12-15T20:31:00.962206Z",
+     "iopub.status.idle": "2024-12-15T20:31:02.272572Z",
+     "shell.execute_reply": "2024-12-15T20:31:02.271512Z",
+     "shell.execute_reply.started": "2024-12-15T20:31:00.962268Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "t = dw.Table('s3://us-west-2.opendata.source.coop/fused/fsq-os-places/2024-12-03/places/*.parquet')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "653e09a8-8277-4034-9947-2e940b8e8e54",
+   "metadata": {},
+   "source": [
+    "It also seems like DuckDB is able to pull only the data needed for the computation. The following row count query is executed much faster than it would be if we needed to download the full dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "60afc138-dc68-4d9e-a6eb-e6a287b1e2de",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-12-15T20:31:02.275694Z",
+     "iopub.status.busy": "2024-12-15T20:31:02.274545Z",
+     "iopub.status.idle": "2024-12-15T20:31:23.438395Z",
+     "shell.execute_reply": "2024-12-15T20:31:23.437700Z",
+     "shell.execute_reply.started": "2024-12-15T20:31:02.275645Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "┌──────────────┐\n",
+       "│ count_star() │\n",
+       "│    int64     │\n",
+       "├──────────────┤\n",
+       "│    104199378 │\n",
+       "└──────────────┘"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t.do('select count(*)')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9fa4766-b71d-4224-b0d9-80816090788a",
+   "id": "974f855f-a3e5-462a-bddc-2ff3a55a8012",
    "metadata": {},
    "outputs": [],
    "source": []
