--- a/notebooks/trips_analysis.ipynb
+++ b/notebooks/trips_analysis.ipynb
@@ -14,7 +14,15 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-12-23T01:49:25.120544Z",
+     "iopub.status.busy": "2024-12-23T01:49:25.120269Z",
+     "iopub.status.idle": "2024-12-23T01:49:25.191145Z",
+     "shell.execute_reply": "2024-12-23T01:49:25.190944Z",
+     "shell.execute_reply.started": "2024-12-23T01:49:25.120519Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import darkwing as dw"
@@ -22,52 +30,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-12-23T01:49:32.187637Z",
+     "iopub.status.busy": "2024-12-23T01:49:32.186989Z",
+     "iopub.status.idle": "2024-12-23T01:49:32.196061Z",
+     "shell.execute_reply": "2024-12-23T01:49:32.195448Z",
+     "shell.execute_reply.started": "2024-12-23T01:49:32.187581Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "┌───────────┬─────────────────────┬─────────────────────┬───┬────────────┬──────────────┬──────────────┐\n",
-       "│ vendor_id │   pickup_datetime   │  dropoff_datetime   │ … │ tip_amount │ tolls_amount │ total_amount │\n",
-       "│  varchar  │       varchar       │       varchar       │   │   double   │    double    │    double    │\n",
-       "├───────────┼─────────────────────┼─────────────────────┼───┼────────────┼──────────────┼──────────────┤\n",
-       "│ VTS       │ 2010-01-26 07:41:00 │ 2010-01-26 07:45:00 │ … │        0.0 │          0.0 │          5.0 │\n",
-       "│ DDS       │ 2010-01-30 23:31:00 │ 2010-01-30 23:46:12 │ … │        0.0 │          0.0 │         16.3 │\n",
-       "│ DDS       │ 2010-01-18 20:22:20 │ 2010-01-18 20:38:12 │ … │        0.0 │          0.0 │         12.7 │\n",
-       "│ VTS       │ 2010-01-09 01:18:00 │ 2010-01-09 01:35:00 │ … │        0.0 │          0.0 │         14.3 │\n",
-       "│ CMT       │ 2010-01-18 19:10:14 │ 2010-01-18 19:17:07 │ … │       0.87 │          0.0 │         6.67 │\n",
-       "│ DDS       │ 2010-01-23 18:40:25 │ 2010-01-23 18:54:51 │ … │        1.0 │          0.0 │         12.0 │\n",
-       "│ VTS       │ 2010-01-17 09:18:00 │ 2010-01-17 09:25:00 │ … │        0.0 │          0.0 │          6.6 │\n",
-       "│ VTS       │ 2010-01-09 13:49:00 │ 2010-01-09 13:56:00 │ … │        0.0 │          0.0 │          7.4 │\n",
-       "│ VTS       │ 2010-01-09 00:25:00 │ 2010-01-09 00:39:00 │ … │        0.0 │          0.0 │         12.3 │\n",
-       "│ VTS       │ 2010-01-27 18:15:00 │ 2010-01-27 18:29:00 │ … │        2.0 │          0.0 │         12.0 │\n",
-       "│  ·        │          ·          │          ·          │ · │         ·  │           ·  │           ·  │\n",
-       "│  ·        │          ·          │          ·          │ · │         ·  │           ·  │           ·  │\n",
-       "│  ·        │          ·          │          ·          │ · │         ·  │           ·  │           ·  │\n",
-       "│ CMT       │ 2010-01-29 10:10:30 │ 2010-01-29 10:16:54 │ … │       1.32 │          0.0 │         7.92 │\n",
-       "│ CMT       │ 2010-01-04 20:25:15 │ 2010-01-04 20:46:17 │ … │       4.06 │          0.0 │        24.36 │\n",
-       "│ VTS       │ 2010-01-07 17:57:00 │ 2010-01-07 18:07:00 │ … │        0.0 │          0.0 │          9.6 │\n",
-       "│ VTS       │ 2010-01-08 00:08:00 │ 2010-01-08 00:22:00 │ … │        1.5 │          0.0 │         12.6 │\n",
-       "│ CMT       │ 2010-01-31 20:36:38 │ 2010-01-31 20:58:12 │ … │        3.0 │          0.0 │         21.7 │\n",
-       "│ CMT       │ 2010-01-16 11:03:42 │ 2010-01-16 11:14:46 │ … │        0.0 │          0.0 │          9.0 │\n",
-       "│ CMT       │ 2010-01-05 08:56:30 │ 2010-01-05 09:04:29 │ … │        0.0 │          0.0 │          6.6 │\n",
-       "│ CMT       │ 2010-01-08 08:40:48 │ 2010-01-08 09:04:44 │ … │        2.0 │          0.0 │         21.8 │\n",
-       "│ CMT       │ 2010-01-08 07:06:21 │ 2010-01-08 07:13:34 │ … │        0.0 │          0.0 │          7.0 │\n",
-       "│ VTS       │ 2010-01-09 03:09:00 │ 2010-01-09 03:18:00 │ … │        0.0 │          0.0 │         10.7 │\n",
-       "├───────────┴─────────────────────┴─────────────────────┴───┴────────────┴──────────────┴──────────────┤\n",
-       "│ ? rows (>9999 rows, 20 shown)                                                   18 columns (6 shown) │\n",
-       "└──────────────────────────────────────────────────────────────────────────────────────────────────────┘"
+       "<A Table Object we do not want to materialize just yet>"
       ]
      },
-     "execution_count": null,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "t1 = dw.Table('data/yellow_tripdata_2010-01.parquet')\n",
+    "t1 = dw.Table('data/yellow_tripdata_2010-01.parquet', defer_repr=True)\n",
     "t1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-12-23T01:50:00.256021Z",
+     "iopub.status.busy": "2024-12-23T01:50:00.255470Z",
+     "iopub.status.idle": "2024-12-23T01:50:00.285943Z",
+     "shell.execute_reply": "2024-12-23T01:50:00.285564Z",
+     "shell.execute_reply.started": "2024-12-23T01:50:00.255981Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "┌───────────┬─────────────────────┬─────────────────────┬─────────────────┬────────────────────┬────────────────────┬─────────────────┬───────────┬────────────────────┬────────────────────┬──────────────────┬──────────────┬───────────────────┬───────────┬─────────┬────────────┬──────────────┬──────────────┐\n",
+       "│ vendor_id │   pickup_datetime   │  dropoff_datetime   │ passenger_count │   trip_distance    │  pickup_longitude  │ pickup_latitude │ rate_code │ store_and_fwd_flag │ dropoff_longitude  │ dropoff_latitude │ payment_type │    fare_amount    │ surcharge │ mta_tax │ tip_amount │ tolls_amount │ total_amount │\n",
+       "│  varchar  │       varchar       │       varchar       │      int64      │       double       │       double       │     double      │  varchar  │      varchar       │       double       │      double      │   varchar    │      double       │  double   │ double  │   double   │    double    │    double    │\n",
+       "├───────────┼─────────────────────┼─────────────────────┼─────────────────┼────────────────────┼────────────────────┼─────────────────┼───────────┼────────────────────┼────────────────────┼──────────────────┼──────────────┼───────────────────┼───────────┼─────────┼────────────┼──────────────┼──────────────┤\n",
+       "│ VTS       │ 2010-01-26 07:41:00 │ 2010-01-26 07:45:00 │               1 │               0.75 │         -73.956778 │        40.76775 │ 1         │ NULL               │         -73.965957 │        40.765232 │ CAS          │               4.5 │       0.0 │     0.5 │        0.0 │          0.0 │          5.0 │\n",
+       "│ DDS       │ 2010-01-30 23:31:00 │ 2010-01-30 23:46:12 │               1 │                5.9 │ -73.99611799999998 │       40.763932 │ 1         │ NULL               │ -73.98151199999998 │        40.741193 │ CAS          │              15.3 │       0.5 │     0.5 │        0.0 │          0.0 │         16.3 │\n",
+       "│ DDS       │ 2010-01-18 20:22:20 │ 2010-01-18 20:38:12 │               1 │                4.0 │         -73.979673 │        40.78379 │ 1         │ NULL               │ -73.91785199999998 │         40.87856 │ CAS          │              11.7 │       0.5 │     0.5 │        0.0 │          0.0 │         12.7 │\n",
+       "│ VTS       │ 2010-01-09 01:18:00 │ 2010-01-09 01:35:00 │               2 │                4.7 │         -73.977922 │       40.763997 │ 1         │ NULL               │ -73.92390799999998 │        40.759725 │ CAS          │              13.3 │       0.5 │     0.5 │        0.0 │          0.0 │         14.3 │\n",
+       "│ CMT       │ 2010-01-18 19:10:14 │ 2010-01-18 19:17:07 │               1 │ 0.5999999999999999 │         -73.990924 │       40.734682 │ 1         │ 0                  │ -73.99551099999998 │        40.739088 │ Cre          │               5.3 │       0.0 │     0.5 │       0.87 │          0.0 │         6.67 │\n",
+       "│ DDS       │ 2010-01-23 18:40:25 │ 2010-01-23 18:54:51 │               1 │                3.3 │                0.0 │             0.0 │ 1         │ NULL               │                0.0 │              0.0 │ CRE          │              10.5 │       0.0 │     0.5 │        1.0 │          0.0 │         12.0 │\n",
+       "│ VTS       │ 2010-01-17 09:18:00 │ 2010-01-17 09:25:00 │               1 │               1.33 │         -73.993747 │       40.754917 │ 1         │ NULL               │ -73.98471499999998 │        40.755927 │ CAS          │               6.1 │       0.0 │     0.5 │        0.0 │          0.0 │          6.6 │\n",
+       "│ VTS       │ 2010-01-09 13:49:00 │ 2010-01-09 13:56:00 │               1 │               1.83 │          -73.97103 │       40.751307 │ 1         │ NULL               │          -73.99056 │        40.734923 │ CAS          │               6.9 │       0.0 │     0.5 │        0.0 │          0.0 │          7.4 │\n",
+       "│ VTS       │ 2010-01-09 00:25:00 │ 2010-01-09 00:39:00 │               1 │               3.28 │         -73.990037 │       40.725633 │ 1         │ NULL               │         -73.993842 │        40.761697 │ CAS          │              11.3 │       0.5 │     0.5 │        0.0 │          0.0 │         12.3 │\n",
+       "│ VTS       │ 2010-01-27 18:15:00 │ 2010-01-27 18:29:00 │               1 │               1.42 │         -73.979623 │        40.74378 │ 1         │ NULL               │ -73.98941499999998 │        40.756788 │ Cre          │               8.5 │       1.0 │     0.5 │        2.0 │          0.0 │         12.0 │\n",
+       "│  ·        │          ·          │          ·          │               · │                 ·  │              ·     │            ·    │ ·         │ ·                  │              ·     │            ·     │  ·           │                ·  │        ·  │      ·  │         ·  │           ·  │           ·  │\n",
+       "│  ·        │          ·          │          ·          │               · │                 ·  │              ·     │            ·    │ ·         │ ·                  │              ·     │            ·     │  ·           │                ·  │        ·  │      ·  │         ·  │           ·  │           ·  │\n",
+       "│  ·        │          ·          │          ·          │               · │                 ·  │              ·     │            ·    │ ·         │ ·                  │              ·     │            ·     │  ·           │                ·  │        ·  │      ·  │         ·  │           ·  │           ·  │\n",
+       "│ CMT       │ 2010-01-29 10:10:30 │ 2010-01-29 10:16:54 │               1 │                1.2 │         -73.954082 │       40.787214 │ 1         │ 0                  │         -73.963656 │        40.771832 │ Cre          │               6.1 │       0.0 │     0.5 │       1.32 │          0.0 │         7.92 │\n",
+       "│ CMT       │ 2010-01-04 20:25:15 │ 2010-01-04 20:46:17 │               1 │                7.2 │         -73.979837 │       40.761188 │ 1         │ 0                  │         -73.995649 │        40.695152 │ Cre          │              19.3 │       0.5 │     0.5 │       4.06 │          0.0 │        24.36 │\n",
+       "│ VTS       │ 2010-01-07 17:57:00 │ 2010-01-07 18:07:00 │               1 │               2.04 │          -73.99348 │       40.742102 │ 1         │ NULL               │         -73.991482 │        40.761327 │ CAS          │ 8.099999999999998 │       1.0 │     0.5 │        0.0 │          0.0 │          9.6 │\n",
+       "│ VTS       │ 2010-01-08 00:08:00 │ 2010-01-08 00:22:00 │               1 │               2.48 │ -74.00726299999998 │       40.740085 │ 1         │ NULL               │ -73.97537199999998 │        40.745958 │ Cre          │              10.1 │       0.5 │     0.5 │        1.5 │          0.0 │         12.6 │\n",
+       "│ CMT       │ 2010-01-31 20:36:38 │ 2010-01-31 20:58:12 │               1 │                6.4 │ -73.99279699999998 │       40.733902 │ 1         │ 0                  │          -73.92429 │        40.774208 │ Cre          │              17.7 │       0.5 │     0.5 │        3.0 │          0.0 │         21.7 │\n",
+       "│ CMT       │ 2010-01-16 11:03:42 │ 2010-01-16 11:14:46 │               1 │                2.1 │ -73.95918899999998 │       40.783264 │ 1         │ 0                  │         -73.981502 │        40.768743 │ Cas          │               8.5 │       0.0 │     0.5 │        0.0 │          0.0 │          9.0 │\n",
+       "│ CMT       │ 2010-01-05 08:56:30 │ 2010-01-05 09:04:29 │               1 │                0.8 │         -73.981093 │       40.733943 │ 1         │ 0                  │ -73.98549699999998 │        40.741723 │ Cas          │               6.1 │       0.0 │     0.5 │        0.0 │          0.0 │          6.6 │\n",
+       "│ CMT       │ 2010-01-08 08:40:48 │ 2010-01-08 09:04:44 │               1 │                6.9 │         -74.016232 │       40.708016 │ 1         │ 0                  │           -73.9779 │        40.762517 │ Cre          │              19.3 │       0.0 │     0.5 │        2.0 │          0.0 │         21.8 │\n",
+       "│ CMT       │ 2010-01-08 07:06:21 │ 2010-01-08 07:13:34 │               1 │                1.5 │         -73.991392 │       40.750361 │ 1         │ 0                  │         -73.988774 │        40.734149 │ Cas          │               6.5 │       0.0 │     0.5 │        0.0 │          0.0 │          7.0 │\n",
+       "│ VTS       │ 2010-01-09 03:09:00 │ 2010-01-09 03:18:00 │               1 │               3.13 │         -74.006062 │       40.746693 │ 1         │ NULL               │         -74.016992 │         40.71142 │ CAS          │               9.7 │       0.5 │     0.5 │        0.0 │          0.0 │         10.7 │\n",
+       "├───────────┴─────────────────────┴─────────────────────┴─────────────────┴────────────────────┴────────────────────┴─────────────────┴───────────┴────────────────────┴────────────────────┴──────────────────┴──────────────┴───────────────────┴───────────┴─────────┴────────────┴──────────────┴──────────────┤\n",
+       "│ ? rows (>9999 rows, 20 shown)                                                                                                                                                                                                                                                                         18 columns │\n",
+       "└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dw.Table(t1)"
    ]
   },
   {
