_hide instead of `hide_repr`

--- a/notebooks/test_repr.ipynb
+++ b/notebooks/test_repr.ipynb
@@ -5,11 +5,11 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-23T03:01:45.693746Z",
-     "iopub.status.busy": "2024-12-23T03:01:45.692813Z",
-     "iopub.status.idle": "2024-12-23T03:01:45.769457Z",
-     "shell.execute_reply": "2024-12-23T03:01:45.769178Z",
-     "shell.execute_reply.started": "2024-12-23T03:01:45.693693Z"
+     "iopub.execute_input": "2024-12-23T03:09:37.073861Z",
+     "iopub.status.busy": "2024-12-23T03:09:37.073667Z",
+     "iopub.status.idle": "2024-12-23T03:09:37.147427Z",
+     "shell.execute_reply": "2024-12-23T03:09:37.147149Z",
+     "shell.execute_reply.started": "2024-12-23T03:09:37.073828Z"
     }
    },
    "outputs": [],
@@ -22,18 +22,18 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-23T03:01:51.324699Z",
-     "iopub.status.busy": "2024-12-23T03:01:51.324029Z",
-     "iopub.status.idle": "2024-12-23T03:01:52.784990Z",
-     "shell.execute_reply": "2024-12-23T03:01:52.783581Z",
-     "shell.execute_reply.started": "2024-12-23T03:01:51.324646Z"
+     "iopub.execute_input": "2024-12-23T03:09:39.589734Z",
+     "iopub.status.busy": "2024-12-23T03:09:39.588802Z",
+     "iopub.status.idle": "2024-12-23T03:09:40.932163Z",
+     "shell.execute_reply": "2024-12-23T03:09:40.931526Z",
+     "shell.execute_reply.started": "2024-12-23T03:09:39.589688Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Table(..., hide_repr=True)>"
+       "<Table(..., _hide=True)>"
       ]
      },
      "execution_count": 2,
@@ -42,7 +42,7 @@
     }
    ],
    "source": [
-    "t = dw.Table('s3://us-west-2.opendata.source.coop/fused/fsq-os-places/2024-12-03/places/*.parquet', hide_repr=True)\n",
+    "t = dw.Table('s3://us-west-2.opendata.source.coop/fused/fsq-os-places/2024-12-03/places/*.parquet', _hide=True)\n",
     "t"
    ]
   },
@@ -51,18 +51,18 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-23T03:01:55.554670Z",
-     "iopub.status.busy": "2024-12-23T03:01:55.554131Z",
-     "iopub.status.idle": "2024-12-23T03:01:56.593919Z",
-     "shell.execute_reply": "2024-12-23T03:01:56.593291Z",
-     "shell.execute_reply.started": "2024-12-23T03:01:55.554630Z"
+     "iopub.execute_input": "2024-12-23T03:09:41.748980Z",
+     "iopub.status.busy": "2024-12-23T03:09:41.748216Z",
+     "iopub.status.idle": "2024-12-23T03:09:42.925623Z",
+     "shell.execute_reply": "2024-12-23T03:09:42.924368Z",
+     "shell.execute_reply.started": "2024-12-23T03:09:41.748941Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Table(..., hide_repr=True)>"
+       "<Table(..., _hide=True)>"
       ]
      },
      "execution_count": 3,
