--- a/notebooks/test_repr.ipynb
+++ b/notebooks/test_repr.ipynb
@@ -5,11 +5,11 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-23T03:09:37.073861Z",
-     "iopub.status.busy": "2024-12-23T03:09:37.073667Z",
-     "iopub.status.idle": "2024-12-23T03:09:37.147427Z",
-     "shell.execute_reply": "2024-12-23T03:09:37.147149Z",
-     "shell.execute_reply.started": "2024-12-23T03:09:37.073828Z"
+     "iopub.execute_input": "2024-12-23T14:55:38.390801Z",
+     "iopub.status.busy": "2024-12-23T14:55:38.390573Z",
+     "iopub.status.idle": "2024-12-23T14:55:38.460861Z",
+     "shell.execute_reply": "2024-12-23T14:55:38.460623Z",
+     "shell.execute_reply.started": "2024-12-23T14:55:38.390778Z"
     }
    },
    "outputs": [],
@@ -22,11 +22,11 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-23T03:09:39.589734Z",
-     "iopub.status.busy": "2024-12-23T03:09:39.588802Z",
-     "iopub.status.idle": "2024-12-23T03:09:40.932163Z",
-     "shell.execute_reply": "2024-12-23T03:09:40.931526Z",
-     "shell.execute_reply.started": "2024-12-23T03:09:39.589688Z"
+     "iopub.execute_input": "2024-12-23T14:55:38.461302Z",
+     "iopub.status.busy": "2024-12-23T14:55:38.461212Z",
+     "iopub.status.idle": "2024-12-23T14:55:39.798220Z",
+     "shell.execute_reply": "2024-12-23T14:55:39.796846Z",
+     "shell.execute_reply.started": "2024-12-23T14:55:38.461294Z"
     }
    },
    "outputs": [
@@ -44,6 +44,34 @@
    "source": [
     "t = dw.Table('s3://us-west-2.opendata.source.coop/fused/fsq-os-places/2024-12-03/places/*.parquet', _hide=True)\n",
     "t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-12-23T14:53:51.978136Z",
+     "iopub.status.busy": "2024-12-23T14:53:51.977436Z",
+     "iopub.status.idle": "2024-12-23T14:53:51.985124Z",
+     "shell.execute_reply": "2024-12-23T14:53:51.984337Z",
+     "shell.execute_reply.started": "2024-12-23T14:53:51.978079Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<Table(..., _hide=True)>'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t.rowcols()"
    ]
   },
   {
@@ -80,18 +108,18 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-23T03:02:00.169727Z",
-     "iopub.status.busy": "2024-12-23T03:02:00.169211Z",
-     "iopub.status.idle": "2024-12-23T03:02:00.175745Z",
-     "shell.execute_reply": "2024-12-23T03:02:00.174881Z",
-     "shell.execute_reply.started": "2024-12-23T03:02:00.169689Z"
+     "iopub.execute_input": "2024-12-23T03:09:52.030467Z",
+     "iopub.status.busy": "2024-12-23T03:09:52.029938Z",
+     "iopub.status.idle": "2024-12-23T03:09:52.039828Z",
+     "shell.execute_reply": "2024-12-23T03:09:52.038975Z",
+     "shell.execute_reply.started": "2024-12-23T03:09:52.030427Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Table(..., hide_repr=True)>"
+       "<Table(..., _hide=True)>"
       ]
      },
      "execution_count": 4,
@@ -105,24 +133,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-23T03:02:15.641327Z",
-     "iopub.status.busy": "2024-12-23T03:02:15.640784Z",
-     "iopub.status.idle": "2024-12-23T03:02:15.647724Z",
-     "shell.execute_reply": "2024-12-23T03:02:15.646673Z",
-     "shell.execute_reply.started": "2024-12-23T03:02:15.641284Z"
+     "iopub.execute_input": "2024-12-23T03:10:01.666333Z",
+     "iopub.status.busy": "2024-12-23T03:10:01.665837Z",
+     "iopub.status.idle": "2024-12-23T03:10:01.673103Z",
+     "shell.execute_reply": "2024-12-23T03:10:01.672198Z",
+     "shell.execute_reply.started": "2024-12-23T03:10:01.666295Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Table(..., hide_repr=True)>"
+       "<Table(..., _hide=True)>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,14 +161,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-23T03:02:30.831689Z",
-     "iopub.status.busy": "2024-12-23T03:02:30.831067Z",
-     "iopub.status.idle": "2024-12-23T03:02:30.838213Z",
-     "shell.execute_reply": "2024-12-23T03:02:30.837320Z",
-     "shell.execute_reply.started": "2024-12-23T03:02:30.831646Z"
+     "iopub.execute_input": "2024-12-23T14:55:44.249864Z",
+     "iopub.status.busy": "2024-12-23T14:55:44.249405Z",
+     "iopub.status.idle": "2024-12-23T14:55:44.257111Z",
+     "shell.execute_reply": "2024-12-23T14:55:44.256229Z",
+     "shell.execute_reply.started": "2024-12-23T14:55:44.249833Z"
     }
    },
    "outputs": [
@@ -148,29 +176,29 @@
      "data": {
       "text/plain": [
        "Database:\n",
-       "    bah: <Hidden Table>"
+       "    bah: <Table(..., _hide=True)>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "db = dw.Database(bah=t, hide_repr=False).hide()\n",
+    "db = dw.Database(bah=t, _hide=False).hide()\n",
     "db"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-12-23T03:02:38.232451Z",
-     "iopub.status.busy": "2024-12-23T03:02:38.231602Z",
-     "iopub.status.idle": "2024-12-23T03:02:59.641467Z",
-     "shell.execute_reply": "2024-12-23T03:02:59.640298Z",
-     "shell.execute_reply.started": "2024-12-23T03:02:38.232406Z"
+     "iopub.execute_input": "2024-12-23T14:55:50.432325Z",
+     "iopub.status.busy": "2024-12-23T14:55:50.431547Z",
+     "iopub.status.idle": "2024-12-23T14:56:17.164330Z",
+     "shell.execute_reply": "2024-12-23T14:56:17.163172Z",
+     "shell.execute_reply.started": "2024-12-23T14:55:50.432284Z"
     }
    },
    "outputs": [
@@ -181,7 +209,7 @@
        "    bah: 104199378 x ['fsq_place_id', 'name', 'latitude', 'longitude', 'address', 'locality', 'region', 'postcode', 'admin_region', 'post_town', 'po_box', 'country', 'date_created', 'date_refreshed', 'date_closed', 'tel', 'website', 'email', 'facebook_id', 'instagram', 'twitter', 'fsq_category_ids', 'fsq_category_labels', 'geometry', 'bbox']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
