don't need _hide in Database (can store in Tables)

--- a/notebooks/test_repr.ipynb
+++ b/notebooks/test_repr.ipynb
@@ -36,7 +36,7 @@
        "<Table(..., _hide=True)>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,6 +44,33 @@
    "source": [
     "t = dw.Table('s3://us-west-2.opendata.source.coop/fused/fsq-os-places/2024-12-03/places/*.parquet', _hide=True)\n",
     "t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100% ▕████████████████████████████████████████████████████████████▏ \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"104199378 x ['fsq_place_id', 'name', 'latitude', 'longitude', 'address', 'locality', 'region', 'postcode', 'admin_region', 'post_town', 'po_box', 'country', 'date_created', 'date_refreshed', 'date_closed', 'tel', 'website', 'email', 'facebook_id', 'instagram', 'twitter', 'fsq_category_ids', 'fsq_category_labels', 'geometry', 'bbox']\""
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t.show().rowcols()"
    ]
   },
   {
@@ -65,13 +92,47 @@
        "'<Table(..., _hide=True)>'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "t.rowcols()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out = t.do('select count(*)').hide()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "┌──────────────┐\n",
+       "│ count_star() │\n",
+       "│    int64     │\n",
+       "├──────────────┤\n",
+       "│    104199378 │\n",
+       "└──────────────┘"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out.show()"
    ]
   },
   {
@@ -161,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-12-23T14:55:44.249864Z",
@@ -179,7 +240,7 @@
        "    bah: <Table(..., _hide=True)>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-12-23T14:55:50.432325Z",
@@ -203,13 +264,20 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100% ▕████████████████████████████████████████████████████████████▏ \n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "Database:\n",
        "    bah: 104199378 x ['fsq_place_id', 'name', 'latitude', 'longitude', 'address', 'locality', 'region', 'postcode', 'admin_region', 'post_town', 'po_box', 'country', 'date_created', 'date_refreshed', 'date_closed', 'tel', 'website', 'email', 'facebook_id', 'instagram', 'twitter', 'fsq_category_ids', 'fsq_category_labels', 'geometry', 'bbox']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
