i think it is working nicely

--- a/docs/tut_fsq.ipynb
+++ b/docs/tut_fsq.ipynb
@@ -68,11 +68,19 @@
      "shell.execute_reply.started": "2024-12-15T20:30:44.900992Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100% ▕████████████████████████████████████████████████████████████▏ \n"
+     ]
+    }
+   ],
    "source": [
     "# NOTE: You can comment out the following two lines once\n",
     "# you have the data saved locally to avoid downloading it again\n",
-    "t = dw.Table('s3://us-west-2.opendata.source.coop/fused/fsq-os-places/2024-12-03/places/10.parquet')\n",
+    "t = dw.Table('s3://us-west-2.opendata.source.coop/fused/fsq-os-places/2024-12-03/places/10.parquet').hide()\n",
     "t.save('data/fsq_places_10.parquet')"
    ]
   },
@@ -185,7 +193,7 @@
        "└─────────────────┴─────────┘"
       ]
      },
-     "execution_count": 5,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +233,7 @@
        "└─────────────────┴────────┘"
       ]
      },
-     "execution_count": 6,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +289,7 @@
        "└──────────────────────────┘"
       ]
      },
-     "execution_count": 7,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +323,7 @@
    },
    "outputs": [],
    "source": [
-    "t = dw.Table('s3://us-west-2.opendata.source.coop/fused/fsq-os-places/2024-12-03/places/*.parquet')"
+    "t = dw.Table('s3://us-west-2.opendata.source.coop/fused/fsq-os-places/2024-12-03/places/*.parquet').hide()"
    ]
   },
   {
@@ -341,6 +349,13 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100% ▕████████████████████████████████████████████████████████████▏ \n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "┌──────────────┐\n",
@@ -351,7 +366,7 @@
        "└──────────────┘"
       ]
      },
-     "execution_count": 9,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,14 +374,6 @@
    "source": [
     "t.do('select count(*)')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0ebcd409-7d16-4282-ad91-d76051d1de59",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
