--- a/docs/tut_lazy.ipynb
+++ b/docs/tut_lazy.ipynb
@@ -79,7 +79,7 @@
        " 'total_amount']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +113,7 @@
        "└──────────┘"
       ]
      },
-     "execution_count": 3,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
        "└───────────────────────────────────────────────────────────┘"
       ]
      },
-     "execution_count": 5,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-12-09T05:28:58.295869Z",
@@ -249,7 +249,7 @@
     "    tbl1 as b\n",
     "using\n",
     "    (hexid)\n",
-    "\"\"\")"
+    "\"\"\").hide()"
    ]
   },
   {
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-12-09T05:28:58.300248Z",
@@ -275,45 +275,45 @@
     {
      "data": {
       "text/plain": [
-       "┌─────────────────┬─────────────────────┬─────────────────────┬───────────────────┬───────────────────┐\n",
-       "│      hexid      │         ts1         │         ts2         │       amt1        │       amt2        │\n",
-       "│     varchar     │      timestamp      │      timestamp      │      double       │      double       │\n",
-       "├─────────────────┼─────────────────────┼─────────────────────┼───────────────────┼───────────────────┤\n",
-       "│ 8c2a1008b0231ff │ 2010-01-02 13:28:13 │ 2010-01-20 19:18:00 │               7.2 │               4.8 │\n",
-       "│ 8c2a100d6c999ff │ 2010-01-02 11:48:34 │ 2010-01-20 23:45:41 │               5.4 │               7.5 │\n",
-       "│ 8c2a100888e3dff │ 2010-01-10 14:49:00 │ 2010-01-21 20:44:00 │               5.4 │               5.9 │\n",
-       "│ 8c2a1008bb9b1ff │ 2010-01-08 14:46:12 │ 2010-01-08 07:46:27 │              19.4 │               7.8 │\n",
-       "│ 8c2a103b0374dff │ 2010-01-08 16:03:15 │ 2010-01-14 17:30:53 │              51.0 │              28.4 │\n",
-       "│ 8c2a100892491ff │ 2010-01-06 18:56:38 │ 2010-01-26 12:15:00 │              13.2 │               7.0 │\n",
-       "│ 8c2a107218303ff │ 2010-01-23 19:23:39 │ 2010-01-28 22:21:11 │              11.7 │               7.9 │\n",
-       "│ 8c2a100d65449ff │ 2010-01-07 21:26:16 │ 2010-01-28 21:20:00 │ 8.099999999999998 │              33.5 │\n",
-       "│ 8c2a100decaa1ff │ 2010-01-30 04:17:36 │ 2010-01-16 16:48:35 │               6.7 │              13.4 │\n",
-       "│ 8c2a100d66d61ff │ 2010-01-26 17:58:09 │ 2010-01-19 19:33:00 │               6.0 │               7.4 │\n",
-       "│        ·        │          ·          │          ·          │                ·  │                ·  │\n",
-       "│        ·        │          ·          │          ·          │                ·  │                ·  │\n",
-       "│        ·        │          ·          │          ·          │                ·  │                ·  │\n",
-       "│ 8c2a100d61091ff │ 2010-01-16 11:24:48 │ 2010-01-06 16:23:00 │              16.6 │ 7.599999999999999 │\n",
-       "│ 8c2a100e25111ff │ 2010-01-10 14:10:00 │ 2010-01-25 19:44:00 │              32.5 │             42.14 │\n",
-       "│ 8c2a100d4c901ff │ 2010-01-16 11:13:00 │ 2010-01-13 10:50:00 │               7.2 │              11.4 │\n",
-       "│ 8c2a100898cc3ff │ 2010-01-22 20:42:00 │ 2010-01-08 07:33:00 │              10.3 │               9.8 │\n",
-       "│ 8c2a1008ba33dff │ 2010-01-11 23:40:32 │ 2010-01-30 16:44:00 │               5.9 │               5.8 │\n",
-       "│ 8c2a100d20ed7ff │ 2010-01-06 19:25:00 │ 2010-01-28 23:07:00 │              10.8 │               9.9 │\n",
-       "│ 8c2a100d216cbff │ 2010-01-31 01:11:00 │ 2010-01-29 23:08:55 │               4.3 │               5.9 │\n",
-       "│ 8c2a107219747ff │ 2010-01-28 07:56:00 │ 2010-01-31 16:11:00 │              11.0 │ 8.199999999999998 │\n",
-       "│ 8c2a100d6305bff │ 2010-01-30 15:38:00 │ 2010-01-24 15:50:00 │               9.4 │               5.4 │\n",
-       "│ 8c2a100d29261ff │ 2010-01-18 13:12:00 │ 2010-01-04 16:38:00 │               4.2 │              10.4 │\n",
-       "├─────────────────┴─────────────────────┴─────────────────────┴───────────────────┴───────────────────┤\n",
-       "│ ? rows (>9999 rows, 20 shown)                                                             5 columns │\n",
-       "└─────────────────────────────────────────────────────────────────────────────────────────────────────┘"
+       "┌─────────────────┬─────────────────────┬─────────────────────┬────────┬───────────────────┐\n",
+       "│      hexid      │         ts1         │         ts2         │  amt1  │       amt2        │\n",
+       "│     varchar     │      timestamp      │      timestamp      │ double │      double       │\n",
+       "├─────────────────┼─────────────────────┼─────────────────────┼────────┼───────────────────┤\n",
+       "│ 8c2a100d45b01ff │ 2010-01-26 07:41:00 │ 2010-01-27 20:32:00 │    5.0 │              48.5 │\n",
+       "│ 8c2a107258e61ff │ 2010-01-30 23:31:00 │ 2010-01-06 16:19:00 │   16.3 │               7.4 │\n",
+       "│ 8c2a1008b82b5ff │ 2010-01-18 20:22:20 │ 2010-01-13 14:38:14 │   12.7 │ 8.199999999999998 │\n",
+       "│ 8c2a100d65653ff │ 2010-01-09 01:18:00 │ 2010-01-14 09:26:00 │   14.3 │               5.4 │\n",
+       "│ 8c2a100d22945ff │ 2010-01-18 19:10:14 │ 2010-01-28 18:43:52 │   6.67 │               7.0 │\n",
+       "│ 8c2a10725ac5bff │ 2010-01-17 09:18:00 │ 2010-01-18 21:15:00 │    6.6 │               7.9 │\n",
+       "│ 8c2a100d620b7ff │ 2010-01-09 13:49:00 │ 2010-01-16 00:08:00 │    7.4 │               5.5 │\n",
+       "│ 8c2a1072c86abff │ 2010-01-09 00:25:00 │ 2010-01-01 08:23:30 │   12.3 │              12.6 │\n",
+       "│ 8c2a100d2bb69ff │ 2010-01-27 18:15:00 │ 2010-01-20 15:07:00 │   12.0 │              13.0 │\n",
+       "│ 8c2a107250403ff │ 2010-01-08 16:05:00 │ 2010-01-25 15:10:15 │   10.2 │              7.92 │\n",
+       "│        ·        │          ·          │          ·          │     ·  │                ·  │\n",
+       "│        ·        │          ·          │          ·          │     ·  │                ·  │\n",
+       "│        ·        │          ·          │          ·          │     ·  │                ·  │\n",
+       "│ 8c2a100d279d9ff │ 2010-01-14 04:14:00 │ 2010-01-27 06:02:00 │    8.3 │               8.0 │\n",
+       "│ 8c2a100d29809ff │ 2010-01-25 21:58:00 │ 2010-01-16 14:14:00 │   13.9 │ 8.199999999999998 │\n",
+       "│ 8c2a10725b28dff │ 2010-01-17 23:46:00 │ 2010-01-11 00:23:00 │    5.1 │ 8.599999999999998 │\n",
+       "│ 8c2a100d2c85bff │ 2010-01-02 09:52:00 │ 2010-01-31 15:11:33 │    5.2 │             14.95 │\n",
+       "│ 8c2a100d654abff │ 2010-01-27 22:29:00 │ 2010-01-28 22:00:46 │    7.5 │               8.3 │\n",
+       "│ 8c2a100d3531dff │ 2010-01-21 12:55:00 │ 2010-01-31 15:47:00 │   11.4 │              12.9 │\n",
+       "│ 8c2a10089649dff │ 2010-01-20 15:11:00 │ 2010-01-07 13:02:00 │   10.1 │               8.0 │\n",
+       "│ 8c2a100d34965ff │ 2010-01-15 20:19:00 │ 2010-01-01 23:24:01 │    7.5 │               4.7 │\n",
+       "│ 8c2a10774924bff │ 2010-01-16 20:11:00 │ 2010-01-30 03:14:04 │   13.1 │              11.9 │\n",
+       "│ 8c2a100f34e99ff │ 2010-01-21 15:09:00 │ 2010-01-14 14:36:00 │   16.2 │               6.2 │\n",
+       "├─────────────────┴─────────────────────┴─────────────────────┴────────┴───────────────────┤\n",
+       "│ ? rows (>9999 rows, 20 shown)                                                  5 columns │\n",
+       "└──────────────────────────────────────────────────────────────────────────────────────────┘"
       ]
      },
-     "execution_count": 7,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "t2"
+    "t2.show()"
    ]
   },
   {
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-12-09T05:28:59.907713Z",
@@ -341,6 +341,13 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100% ▕████████████████████████████████████████████████████████████▏ \n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "┌──────────┐\n",
@@ -351,7 +358,7 @@
        "└──────────┘"
       ]
      },
-     "execution_count": 8,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-12-09T05:29:50.351711Z",
@@ -390,6 +397,7 @@
     "    'select hexid, max(abs(amt1-amt2)) as diff group by 1',\n",
     "    'where diff > 0'\n",
     "    'order by diff',\n",
+    "    'hide',\n",
     ")"
    ]
   },
@@ -411,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-12-09T05:29:50.374291Z",
@@ -423,6 +431,13 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100% ▕████████████████████████████████████████████████████████████▏ \n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "┌──────────┐\n",
@@ -433,7 +448,7 @@
        "└──────────┘"
       ]
      },
-     "execution_count": 10,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,12 +461,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Get a Pandas dataframe in about 53 seconds."
+    "We can translate to a Pandas dataframe in about 53 seconds."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-12-09T05:30:34.558561Z",
@@ -462,6 +477,13 @@
     }
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100% ▕████████████████████████████████████████████████████████████▏ \n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -500,17 +522,17 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>8c2a1072c846bff</td>\n",
+       "      <td>8c2a100891611ff</td>\n",
        "      <td>0.02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>8c2a107253359ff</td>\n",
+       "      <td>8c2a1072c846bff</td>\n",
        "      <td>0.02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>8c2a100891611ff</td>\n",
+       "      <td>8c2a100d67a93ff</td>\n",
        "      <td>0.02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -552,9 +574,9 @@
        "                 hexid    diff\n",
        "0      8c2a100d2d12bff    0.01\n",
        "1      8c2a100d2a94dff    0.02\n",
-       "2      8c2a1072c846bff    0.02\n",
-       "3      8c2a107253359ff    0.02\n",
-       "4      8c2a100891611ff    0.02\n",
+       "2      8c2a100891611ff    0.02\n",
+       "3      8c2a1072c846bff    0.02\n",
+       "4      8c2a100d67a93ff    0.02\n",
        "...                ...     ...\n",
        "28563  8c2a10aa2cb13ff  175.88\n",
        "28564  8c2a100f52815ff  180.45\n",
@@ -565,7 +587,7 @@
        "[28568 rows x 2 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
