--- a/notebooks/test_repr.ipynb
+++ b/notebooks/test_repr.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-12-23T14:55:38.390801Z",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-12-23T14:55:38.461302Z",
@@ -31,19 +31,38 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100% ▕████████████████████████████████████████████████████████████▏ \n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<Table(..., _hide=True)>"
+       "┌──────────────┐\n",
+       "│ count_star() │\n",
+       "│    int64     │\n",
+       "├──────────────┤\n",
+       "│    104199378 │\n",
+       "└──────────────┘"
       ]
      },
      "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100% ▕████████████████████████████████████████████████████████████▏ \n"
+     ]
     }
    ],
    "source": [
-    "t = dw.Table('s3://us-west-2.opendata.source.coop/fused/fsq-os-places/2024-12-03/places/*.parquet', _hide=True)\n",
-    "t"
+    "t = dw.Table('s3://us-west-2.opendata.source.coop/fused/fsq-os-places/2024-12-03/places/*.parquet', _hide=False)\n",
+    "t.do('select count(*)')"
    ]
   },
   {
@@ -52,20 +71,34 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100% ▕████████████████████████████████████████████████████████████▏ \n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "Database:\n",
-       "    tbl1: <Table(..., _hide=True)>"
+       "    as tbl1: 104199378 x ['fsq_place_id', 'name', 'latitude', 'longitude', 'address', 'locality', 'region', 'postcode', 'admin_region', 'post_town', 'po_box', 'country', 'date_created', 'date_refreshed', 'date_closed', 'tel', 'website', 'email', 'facebook_id', 'instagram', 'twitter', 'fsq_category_ids', 'fsq_category_labels', 'geometry', 'bbox']"
       ]
      },
      "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100% ▕████████████████████████████████████████████████████████████▏ \n"
+     ]
     }
    ],
    "source": [
     "t = dw.Table('s3://us-west-2.opendata.source.coop/fused/fsq-os-places/2024-12-03/places/*.parquet')\n",
-    "t = t.do('as tbl1', 'hide')\n",
+    "t = t.do('alias tbl1', 'show')\n",
     "t"
    ]
   },
