--- a/notebooks/penguin.ipynb
+++ b/notebooks/penguin.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
    "source": [
     "import darkwing as dw\n",
     "\n",
-    "# t = dw.Table('https://raw.githubusercontent.com/allisonhorst/palmerpenguins/main/inst/extdata/penguins.csv')\n",
+    "# t = dw.Table('https://raw.githubusercontent.com/allisonhorst/palmerpenguins/main/inst/extdata/penguins.csv').hide()\n",
     "t = dw.Table('data/penguins.csv')\n",
     "t"
    ]
