--- a/docs/tut_fsq.ipynb
+++ b/docs/tut_fsq.ipynb
@@ -42,7 +42,7 @@
    },
    "outputs": [],
    "source": [
-    "import darkwing as dw"
+    "import duckboat as dw"
    ]
   },
   {
@@ -52,7 +52,7 @@
    "source": [
     "## Load the data\n",
     "\n",
-    "We can download the data with `darkwing` and save it to a file for quick iteration."
+    "We can download the data with `duckboat` and save it to a file for quick iteration."
    ]
   },
   {
@@ -89,7 +89,7 @@
    "id": "7445de57-9df3-411f-b611-2cde41297264",
    "metadata": {},
    "source": [
-    "With the data saved to a file, we can create a `darkwing` table from a local Parquet file."
+    "With the data saved to a file, we can create a `duckboat` table from a local Parquet file."
    ]
   },
   {
