--- a/docs/tut_lazy.ipynb
+++ b/docs/tut_lazy.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "Since `darkwing` is based on the DuckDB relational API, all expressions are \"lazy\" in that they defer evaluation until a result or a data preview is requested.\n",
+    "Since `duckboat` is based on the DuckDB relational API, all expressions are \"lazy\" in that they defer evaluation until a result or a data preview is requested.\n",
     "This allows us to build up complex data processing pipelines iteratively, but without needing to compute extranous intermediate results. Instead, under the hood, DuckDB will gather the sequence of steps and pass it to a query optimizer, which will apply optimizations like predicate and projection pushdown. The full operation will be executed by DuckDB making full use of all the cores available on your machine, streaming the operations if possible, and even spilling to disk if the operation is too large to fit in memory."
    ]
   },
@@ -40,7 +40,7 @@
    },
    "outputs": [],
    "source": [
-    "import darkwing as dw"
+    "import duckboat as dw"
    ]
   },
   {
