--- a/notebooks/penguin.ipynb
+++ b/notebooks/penguin.ipynb
@@ -46,7 +46,7 @@
     }
    ],
    "source": [
-    "import darkwing as dw\n",
+    "import duckboat as dw\n",
     "\n",
     "# t = dw.Table('https://raw.githubusercontent.com/allisonhorst/palmerpenguins/main/inst/extdata/penguins.csv').hide()\n",
     "t = dw.Table('data/penguins.csv')\n",
@@ -79,7 +79,7 @@
     }
    ],
    "source": [
-    "import darkwing as dw\n",
+    "import duckboat as dw\n",
     "\n",
     "csv = 'https://raw.githubusercontent.com/allisonhorst/palmerpenguins/main/inst/extdata/penguins.csv'\n",
     "\n",
