--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import darkwing as dw\n",
+    "import duckboat as dw\n",
     "\n",
     "def foo(rel, res=6):\n",
     "    return rel.do(\n",
