--- a/notebooks/trips_analysis.ipynb
+++ b/notebooks/trips_analysis.ipynb
@@ -25,7 +25,7 @@
    },
    "outputs": [],
    "source": [
-    "import darkwing as dw"
+    "import duckboat as dw"
    ]
   },
   {
@@ -1029,7 +1029,7 @@
     }
    ],
    "source": [
-    "import darkwing as dw\n",
+    "import duckboat as dw\n",
     "\n",
     "core = [\n",
     "    'select *, h3_latlng_to_cell(pickup_latitude, pickup_longitude, 8) as hexid',\n",
