--- a/docs/lazy.qmd
+++ b/docs/lazy.qmd
@@ -2,7 +2,7 @@
 title: "Lazy Evaluation"
 ---
 
-Since `darkwing` builds on top of DuckDB's relational API, all expressions are lazily evaluated by default.
+Since `duckboat` builds on top of DuckDB's relational API, all expressions are lazily evaluated by default.
 This means that complex query expressions can be built up interactively and step by step, and when you are ready to evaluate
 the final expression (or any intermediate expressions), the query steps will be assembed and optimized by the query planner
 to allow for the most efficient execuation possible:
