--- a/notebooks/Untitled-1.ipynb
+++ b/notebooks/Untitled-1.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import darkwing as dw\n",
+    "import duckboat as dw\n",
     "import pandas as pd\n",
     "from pathlib import Path"
    ]
@@ -82,31 +82,31 @@
       "\u001b[1;32m      1\u001b[0m f \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mselect a + 1 as a\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
       "\u001b[0;32m----> 3\u001b[0m \u001b[43mtbl\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdo\u001b[49m\u001b[43m(\u001b[49m\u001b[43mf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mint\u001b[39;49m\u001b[43m)\u001b[49m\n",
       "\n",
-      "File \u001b[0;32m~/work/darkwing/src/darkwing/_objects.py:129\u001b[0m, in \u001b[0;36mTable.do\u001b[0;34m(self, *others)\u001b[0m\n",
+      "File \u001b[0;32m~/work/duckboat/src/duckboat/_objects.py:129\u001b[0m, in \u001b[0;36mTable.do\u001b[0;34m(self, *others)\u001b[0m\n",
       "\u001b[1;32m    128\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdo\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;241m*\u001b[39mothers):\n",
       "\u001b[0;32m--> 129\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mdo\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mothers\u001b[49m\u001b[43m)\u001b[49m\n",
       "\n",
-      "File \u001b[0;32m~/work/darkwing/src/darkwing/doer.py:5\u001b[0m, in \u001b[0;36mdo\u001b[0;34m(A, *xs)\u001b[0m\n",
+      "File \u001b[0;32m~/work/duckboat/src/duckboat/doer.py:5\u001b[0m, in \u001b[0;36mdo\u001b[0;34m(A, *xs)\u001b[0m\n",
       "\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdo\u001b[39m(A, \u001b[38;5;241m*\u001b[39mxs):\n",
       "\u001b[1;32m      4\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m xs:\n",
       "\u001b[0;32m----> 5\u001b[0m         A \u001b[38;5;241m=\u001b[39m \u001b[43mdo_one\u001b[49m\u001b[43m(\u001b[49m\u001b[43mA\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m)\u001b[49m\n",
       "\u001b[1;32m      6\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m A\n",
       "\n",
-      "File \u001b[0;32m~/work/darkwing/src/darkwing/doer.py:11\u001b[0m, in \u001b[0;36mdo_one\u001b[0;34m(A, x)\u001b[0m\n",
+      "File \u001b[0;32m~/work/duckboat/src/duckboat/doer.py:11\u001b[0m, in \u001b[0;36mdo_one\u001b[0;34m(A, x)\u001b[0m\n",
       "\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdo_one\u001b[39m(A, x):\n",
       "\u001b[1;32m      9\u001b[0m     \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_objects\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Table, Database\n",
       "\u001b[0;32m---> 11\u001b[0m     x \u001b[38;5;241m=\u001b[39m \u001b[43m_get_if_file\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m)\u001b[49m\n",
       "\u001b[1;32m     13\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(A, Table):\n",
       "\u001b[1;32m     14\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mstr\u001b[39m):\n",
       "\n",
-      "File \u001b[0;32m~/work/darkwing/src/darkwing/_get_if_file.py:14\u001b[0m, in \u001b[0;36m_get_if_file\u001b[0;34m(s)\u001b[0m\n",
+      "File \u001b[0;32m~/work/duckboat/src/duckboat/_get_if_file.py:14\u001b[0m, in \u001b[0;36m_get_if_file\u001b[0;34m(s)\u001b[0m\n",
       "\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(s, Path):\n",
       "\u001b[1;32m     12\u001b[0m     s \u001b[38;5;241m=\u001b[39m s\u001b[38;5;241m.\u001b[39mread_text()\n",
       "\u001b[0;32m---> 14\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[43m_is_file\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m)\u001b[49m:\n",
       "\u001b[1;32m     15\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(s) \u001b[38;5;28;01mas\u001b[39;00m f:\n",
       "\u001b[1;32m     16\u001b[0m         s \u001b[38;5;241m=\u001b[39m f\u001b[38;5;241m.\u001b[39mread()\n",
       "\n",
-      "File \u001b[0;32m~/work/darkwing/src/darkwing/_get_if_file.py:5\u001b[0m, in \u001b[0;36m_is_file\u001b[0;34m(s)\u001b[0m\n",
+      "File \u001b[0;32m~/work/duckboat/src/duckboat/_get_if_file.py:5\u001b[0m, in \u001b[0;36m_is_file\u001b[0;34m(s)\u001b[0m\n",
       "\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_is_file\u001b[39m(s: \u001b[38;5;28mstr\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mbool\u001b[39m:\n",
       "\u001b[1;32m      4\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n",
       "\u001b[0;32m----> 5\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mPath\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mis_file()\n",
