--- a/notebooks/test_repr.ipynb
+++ b/notebooks/test_repr.ipynb
@@ -14,7 +14,7 @@
    },
    "outputs": [],
    "source": [
-    "import darkwing as dw"
+    "import duckboat as dw"
    ]
   },
   {
@@ -631,7 +631,7 @@
     }
    ],
    "source": [
-    "import darkwing as dw"
+    "import duckboat as dw"
    ]
   },
   {
